ZumZumFinancials_Dev1/src/objects/Opening_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nominal_Account__c</fullName>
        <label>Nominal Account</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>Opening Balances</relationshipLabel>
        <relationshipName>Opening_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opening_Balance_Date__c</fullName>
        <label>Opening Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opening Balance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opening Balance ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opening Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>